@@ -144,7 +144,7 @@ BEGIN
     CONTROL         "&Revision",IDC_REVISION_N,"Button",BS_AUTORADIOBUTTON,
                     13,106,74,10
     EDITTEXT        IDC_REVISION_NUM,100,105,58,14,ES_AUTOHSCROLL | 
-                    WS_DISABLED
+                    ES_NUMBER | WS_DISABLED
     DEFPUSHBUTTON   "&OK",IDOK,186,133,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,245,133,48,14
 END
@@ -435,7 +435,7 @@ BEGIN
                     BS_AUTORADIOBUTTON,13,60,80,10
     CONTROL         "&Revision",IDC_REVISION_N,"Button",BS_AUTORADIOBUTTON,
                     13,76,73,10
-    EDITTEXT        IDC_REVISION_NUM,94,75,58,14,ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_REVISION_NUM,94,75,58,14,ES_AUTOHSCROLL | ES_NUMBER | 
                     WS_DISABLED
     DEFPUSHBUTTON   "&OK",IDOK,186,108,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,243,108,50,14
@@ -452,7 +452,8 @@ BEGIN
                     13,21,106,10
     CONTROL         "&Revision",IDC_REVISION_N,"Button",BS_AUTORADIOBUTTON,
                     13,37,111,10
-    EDITTEXT        IDC_REVNUM,132,36,58,14,ES_AUTOHSCROLL | WS_DISABLED
+    EDITTEXT        IDC_REVNUM,132,36,58,14,ES_AUTOHSCROLL | ES_NUMBER | 
+                    WS_DISABLED
     DEFPUSHBUTTON   "&OK",IDOK,89,65,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,146,65,50,14
 END
