@@ -1,4 +1,6 @@
 - ADD: Find dialog for TortoiseMerge. (Stefan)
+- CHG: Improved checking for correctness of revision
+       number fields (Thomas Epting)
 - CHG: When "Ignore all whitespaces" is active and 
        "don't show whitespaces" then the line diff bar
        doesn't show those whitespaces. (Stefan)
